force-app/main/default/objects/IT_Control__c/IT_Control__c.object-meta.xml
<CustomObject>
    <label>Control</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Control</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>