force-app/main/default/objects/IT_Control__c/fields/IT_City_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_City_Code__c</fullName>
    <label>City Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>