force-app/main/default/objects/IT_Control__c/fields/IT_CLN_Line_number__c.field-meta.xml
<CustomField>
    <fullName>IT_CLN_Line_number__c</fullName>
    <label>Line number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>