force-app/main/default/objects/IT_Control__c/fields/IT_CLN_Service__c.field-meta.xml
<CustomField>
    <fullName>IT_CLN_Service__c</fullName>
    <label>Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>