force-app/main/default/objects/IT_Control__c/fields/IT_CLN_Ticket_exposure_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_CLN_Ticket_exposure_Code__c</fullName>
    <label>Ticket exposure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>