force-app/main/default/objects/IT_Control__c/fields/IT_CLN_Ticket_exposure_type__c.field-meta.xml
<CustomField>
    <fullName>IT_CLN_Ticket_exposure_type__c</fullName>
    <label>Ticket exposure type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>