force-app/main/default/objects/IT_Control__c/fields/IT_EXP_Service__c.field-meta.xml
<CustomField>
    <fullName>IT_EXP_Service__c</fullName>
    <label>EXP Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>