force-app/main/default/objects/IT_Control__c/fields/IT_EXP_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_EXP_Type__c</fullName>
    <label>EXP Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>