force-app/main/default/objects/IT_Control__c/fields/IT_Matched_Delivery_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Matched_Delivery_Branch_Code__c</fullName>
    <label>Matched Delivery Branch Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>