force-app/main/default/objects/IT_Control__c/fields/IT_Matched_Delivery_Branch_Naming__c.field-meta.xml
<CustomField>
    <fullName>IT_Matched_Delivery_Branch_Naming__c</fullName>
    <label>Matched Delivery Branch Naming</label>
    <length>255</length>
    <type>Text</type>
</CustomField>