force-app/main/default/objects/IT_Control__c/fields/IT_Matched_Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Matched_Delivery_Number__c</fullName>
    <label>Matched Delivery Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>