force-app/main/default/objects/IT_Control__c/fields/IT_Matched_Delivery_Provider__c.field-meta.xml
<CustomField>
    <fullName>IT_Matched_Delivery_Provider__c</fullName>
    <label>Matched Delivery Provider</label>
    <length>4</length>
    <type>Text</type>
</CustomField>