force-app/main/default/objects/IT_Control__c/fields/IT_Payment_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Payment_Code__c</fullName>
    <label>Payment Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>