force-app/main/default/objects/IT_Control__c/fields/IT_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>