force-app/main/default/objects/IT_Control__c/fields/IT_Picklist_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Picklist_Name__c</fullName>
    <label>Picklist Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>