force-app/main/default/objects/IT_Control__c/fields/IT_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>