force-app/main/default/objects/IT_Control__c/fields/IT_Provider_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Provider_Code__c</fullName>
    <label>Provider Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>