force-app/main/default/objects/IT_Control__c/fields/IT_RID__c.field-meta.xml
<CustomField>
    <fullName>IT_RID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RID</label>
    <type>Checkbox</type>
</CustomField>