force-app/main/default/objects/IT_Control__c/fields/IT_Vehicle_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Vehicle_Code__c</fullName>
    <label>Vehicle Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>