force-app/main/default/objects/IT_Control__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IT_Postal_Code__c</columns>
    <columns>IT_Provider_Code__c</columns>
    <columns>IT_Vehicle_Code__c</columns>
    <columns>IT_Hamlet_Code__c</columns>
    <columns>IT_Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IT_City_Code__c</field>
        <operation>equals</operation>
        <value>38000005121</value>
    </filters>
    <label>All</label>
</ListView>